--- a/algo/CMakeLists.txt
+++ b/algo/CMakeLists.txt
@@ -5,3 +5,4 @@ add_executable(greedy_flowers greedy_flowers.cc)
 add_executable(greedy_min_arrows greedy_min_arrows.cc)
 add_executable(greedy_internal_overlap greedy_internal_overlap.cc)
 add_executable(greedy_partition_labels greedy_partition_labels.cc)
+add_executable(greedy_max_profit greedy_max_profit.cc)
