--- a/algo/CMakeLists.txt
+++ b/algo/CMakeLists.txt
@@ -6,3 +6,5 @@ add_executable(greedy_min_arrows greedy_min_arrows.cc)
 add_executable(greedy_internal_overlap greedy_internal_overlap.cc)
 add_executable(greedy_partition_labels greedy_partition_labels.cc)
 add_executable(greedy_max_profit greedy_max_profit.cc)
+add_executable(greedy_reconstruct_queue greedy_reconstruct_queue.cc)
+add_executable(greedy_non_decrease greedy_non_decrease.cc)
