add two pointer tests

--- a/algo/twopointer/CMakeLists.txt
+++ b/algo/twopointer/CMakeLists.txt
@@ -1,3 +1,8 @@
 add_executable(twopointer_two_sum twopointer_two_sum.cc)
 add_executable(twopointer_merge_two_sarr twopointer_merge_two_sarr.cc)
 add_executable(twopointer_listcycle twopointer_listcycle.cc)
+add_executable(twopointer_min_str twopointer_min_str.cc)
+add_executable(twopointer_judge_square twopointer_judge_square.cc)
+add_executable(twopointer_valid_palindrome twopointer_valid_palindrome.cc)
+add_executable(twopointer_longest_word twopointer_longest_word.cc)
+add_executable(twopointer_longest_k_substr twopointer_longest_k_substr.cc)
