add quick sort test

--- a/algo/CMakeLists.txt
+++ b/algo/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(greedy)
 add_subdirectory(twopointer)
 add_subdirectory(binary)
 add_subdirectory(datastruct)
+add_subdirectory(sort)
